added basic definition of swagger changes
